--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Thomas Eusebio Vieira",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "express": "^4.17.2",
     "json-stringify-safe": "^5.0.1",
     "moment": "^2.29.1"
